feat: use mongoDB

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,11 @@ textarea {
 .error-text {
   color: red;
 }
+
+.movies {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+}
