--- a/src/containers/MovieContainer/MovieContainer.css
+++ b/src/containers/MovieContainer/MovieContainer.css
@@ -1,23 +1,24 @@
 .header {
-    height: 100px;
-    background-color: lightblue;
-    font-size: 2em;
-    width: 100%;
+  height: 100px;
+  color: #473f3a;
+  background-color: #e8d2c0;
+  font-size: 2em;
+  width: 100%;
 }
 
 .nowrapDiv {
-    display: inline-block;
-    *display: inline;
-    /*for IE 7 */
-    *zoom: 1;
-    /*for IE 7 */
-    vertical-align: top;
+  display: inline-block;
+  *display: inline;
+  /*for IE 7 */
+  *zoom: 1;
+  /*for IE 7 */
+  vertical-align: top;
 }
 
 .div1 {
-    padding: 15px;
+  padding: 15px;
 }
 
 .headerText {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
