--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,11 @@ Material UI related styles START
   padding-top: 5px !important;
 }
 
+:global(.MuiPagination-root) {
+  display: flex;
+  justify-content: center;
+}
+
 /* 
 -----------------------------------------------------------------------------
 Material UI related styles END
