--- a/src/components/MyLibrary/MyLibrary.css
+++ b/src/components/MyLibrary/MyLibrary.css
@@ -6,3 +6,19 @@
 .pagination-style {
   margin-top: 10px;
 }
+
+.link-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  text-decoration: underline;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem !important;
+}
+
+.link-button:hover,
+.link-button:focus {
+  text-decoration: none;
+}
