--- a/src/components/Movies/MovieSearch/MovieSearch.css
+++ b/src/components/Movies/MovieSearch/MovieSearch.css
@@ -2,3 +2,11 @@
   margin-bottom: 20px;
   margin-top: 10px;
 }
+
+.movies {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+}
