--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,3 +1,5 @@
+@import './styles/globalTheme.module.scss';
+
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
@@ -10,10 +12,6 @@ body {
 
   margin: auto;
   text-align: center;
-  height: 100%;
-}
-
-root {
   height: 100%;
 }
 
@@ -133,6 +131,10 @@ Material UI related styles START
 }
 
 :global(.MuiBox-root) {
+  padding: 0 !important;
+  @media #{$md} {
+    padding: 24px !important;
+  }
   padding-top: 5px !important;
 }
 
@@ -156,8 +158,11 @@ Material UI related styles START
 }
 
 :global(.MuiDialogContent-root) {
-  padding: 24px !important;
+  padding: 0 !important;
   border-bottom: 1px solid #cacdd2;
+  @media #{$md} {
+    padding: 24px !important;
+  }
 }
 
 :global(.MuiDialogContentText-root) {
