--- a/src/components/MyLibrary/LibrarySearchBox/librarySearchBox.module.scss
+++ b/src/components/MyLibrary/LibrarySearchBox/librarySearchBox.module.scss
@@ -1,5 +1,26 @@
 @import '../../../styles/globalTheme.module.scss';
 
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+
+  @media #{$md} {
+    font-size: 22px;
+  }
+}
+
+.expand-button {
+  min-width: unset !important;
+  margin-left: 5px !important;
+}
+
+.expand-button-rotated {
+  transform: rotate(180deg);
+}
+
 .label-and-input-div {
   margin-bottom: 20px;
   font-size: 0.9rem;
@@ -47,13 +68,13 @@
   max-width: 450px;
   min-width: 300px;
   margin: auto;
-  padding: 20px;
+  padding: 5px;
 }
 
 .card-title {
-  margin: auto;
-  padding: 15px;
-  font-weight: bold;
+  @media #{$md} {
+    padding: 5px;
+  }
 }
 
 .genre-button {
@@ -62,7 +83,7 @@
 }
 
 .button-div {
-  margin-top: 30px;
+  margin: 30px 0 15px 0;
 }
 
 .helpicon {
