--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -1,3 +1,9 @@
+.tab-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .tabs-div {
   float: left;
   justify-content: left !important;
@@ -6,8 +12,4 @@
 
 .logout-button {
   float: right;
-}
-
-.my-library {
-  display: none !important;
 }
