--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/globalTheme.module.scss';
+
 .link-button {
   background-color: transparent;
   border: none;
@@ -12,4 +14,10 @@
 .link-button:hover,
 .link-button:focus {
   text-decoration: none;
+}
+
+.table {
+  margin: auto;
+  width: 90%;
+  max-width: $md-screen;
 }
