--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -24,6 +24,10 @@ textarea {
   font-size: 1rem !important;
 }
 
+.spinner-full-page {
+  padding: 40px;
+}
+
 /*
 Note: this is for the chart-js styling
 */
