--- a/src/components/MySubscriptions/mySubscriptions.module.scss
+++ b/src/components/MySubscriptions/mySubscriptions.module.scss
@@ -6,9 +6,19 @@
   max-width: $md-screen;
 }
 
+.intro {
+  margin-top: 30px;
+}
+
 .button-div {
   margin-top: 30px;
   display: flex;
   gap: 10px;
   justify-content: center;
+}
+
+.radio-group {
+  @media #{$xs} {
+    gap: 20px;
+  }
 }
