--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -174,6 +174,10 @@ Material UI related styles START
   text-align: left !important;
 }
 
+:global(.MuiTypography-root) {
+  font-size: unset !important;
+}
+
 /* 
 -----------------------------------------------------------------------------
 Material UI related styles END
