feat: subscription to impact checkout process

--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -25,3 +25,12 @@
 .button-div {
   margin-top: 20px;
 }
+
+.subscription-info {
+  margin: 20px 0;
+
+  span {
+    color: green;
+    font-weight: bold;
+  }
+}
