feat: dark mode support

--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -1,7 +1,8 @@
 @import '../../styles/globalTheme.module.scss';
 
 .link-button {
-  background-color: transparent;
+  background: inherit;
+  color: inherit;
   border: none;
   cursor: pointer;
   text-decoration: underline;
