--- a/src/components/MyLibrary/MovieTable/movieTable.module.scss
+++ b/src/components/MyLibrary/MovieTable/movieTable.module.scss
@@ -16,7 +16,8 @@
 }
 
 .link-button {
-  background-color: transparent;
+  background: inherit;
+  color: inherit;
   border: none;
   cursor: pointer;
   text-decoration: underline;
