--- a/src/components/Movies/MovieDetails/movieDetails.module.scss
+++ b/src/components/Movies/MovieDetails/movieDetails.module.scss
@@ -40,7 +40,7 @@
 }
 
 .header-custom {
-  height: 48px;
+  height: 40px;
   display: flex;
   margin: 0;
 }
@@ -59,8 +59,9 @@
 }
 
 .close-button {
-  height: 48px;
-  width: 48px;
+  height: 40px;
+  width: 40px;
+  min-width: unset;
   padding: 0 !important;
 }
 
