feat: add bootstrap

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -179,3 +179,5 @@ Material UI related styles START
 Material UI related styles END
 -----------------------------------------------------------------------------
 */
+
+@import '../node_modules/bootstrap/scss/bootstrap';
