feat: subscription styling bootstrap

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -178,3 +178,7 @@ Material UI related styles START
 -----------------------------------------------------------------------------
 Material UI related styles END
 */
+
+.btn-outline-secondary {
+  color: black !important;
+}
