--- a/src/styles/globalTheme.module.scss
+++ b/src/styles/globalTheme.module.scss
@@ -1,5 +1,5 @@
-// Taken from https://tailwindcss.com/docs/responsive-design
-$xs: '(max-width: 640px)';
+// Taken from https://getbootstrap.com/docs/5.1/layout/breakpoints/
+$xs: '(max-width: 576px)';
 $sm: '(max-width: 768px)';
 $md: '(min-width: 769px)';
 
