--- a/src/components/MyLibrary/LibrarySearchBox/librarySearchBox.module.scss
+++ b/src/components/MyLibrary/LibrarySearchBox/librarySearchBox.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   font-size: 18px;
   font-weight: bold;
+  color: $grey;
 
   @media #{$md} {
     font-size: 22px;
@@ -14,7 +15,6 @@
 
 .expand-button {
   min-width: unset !important;
-  margin-left: 5px !important;
 }
 
 .expand-button-rotated {
