--- a/src/components/MyLibrary/LibrarySearchBox/librarySearchBox.module.scss
+++ b/src/components/MyLibrary/LibrarySearchBox/librarySearchBox.module.scss
@@ -31,6 +31,7 @@
   height: 30px;
   max-width: 350px;
   width: 250px;
+  margin: auto;
   @media #{$md} {
     width: 328px;
   }
@@ -38,6 +39,7 @@
 
 .input-style-select {
   height: 30px;
+  margin: auto;
 }
 
 .input-style-form-control {
@@ -62,7 +64,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 5px;
+  margin: auto;
 }
 
 .card-style {
