--- a/src/components/MyLibrary/MovieTable/movieTable.module.scss
+++ b/src/components/MyLibrary/MovieTable/movieTable.module.scss
@@ -11,7 +11,11 @@
 }
 
 .pagination-style {
-  margin-top: 10px;
+  display: flex;
+  place-items: center;
+  justify-content: end;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .link-button {
