feat: movie details

--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -11,6 +11,7 @@ Boostrap variables override START
 $theme-colors: (
   'primary': $primary,
   'secondary': #e8d2c0,
+  'success': #198754,
 );
 
 /* 
