feat: misc pages

--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/globalTheme.module.scss';
 
 .table {
-  margin: auto;
+  margin: 0 auto;
   width: 90%;
   max-width: $md-screen;
 }
