--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -38,6 +38,16 @@ canvas {
 Note: chart-js styling, END
 */
 
+.snackbar-item-root {
+  div {
+    width: 100% !important;
+    div {
+      flex: 1;
+      justify-content: space-between;
+    }
+  }
+}
+
 .error-text {
   color: red;
   margin-top: 30px;
