--- a/src/styles/darkMode.scss
+++ b/src/styles/darkMode.scss
@@ -1,25 +1,9 @@
 html[darkmode] {
-
-  // Generate dark palettes for theme colors.
-  $primary:       #20c997;
-  $secondary:     #5e7683;
-  $accent-1:      #212529;
-  $accent-2:      #414850;
-  $accent-3:      #adb5bd;
-
-  $theme-colors: (
-    "primary":    $primary,
-    "secondary":  $secondary,
-    "accent-1":   $accent-1,
-    "accent-2":   $accent-2,
-    "accent-3":   $accent-3,
-  );
-
   @each $color, $value in $theme-colors {
     --#{$variable-prefix}#{$color}: #{$value};
   }
 
-  $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
+  $theme-colors-rgb: map-loop($theme-colors, to-rgb, '$value');
 
   @each $color, $value in $theme-colors-rgb {
     --#{$variable-prefix}#{$color}-rgb: #{$value};
@@ -32,4 +16,8 @@ html[darkmode] {
   --#{$variable-prefix}body-color-rgb: #{to-rgb($body-bg)};
   --#{$variable-prefix}body-bg-rgb: #{to-rgb($body-color)};
 
+  .card {
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+  }
 }
