--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -64,6 +64,30 @@ Boostrap classes override START
 .pagination {
   margin-bottom: 0 !important;
 }
+
+.form-control {
+  // resetting to UA defaults
+  color: fieldtext !important;
+  background-color: field !important;
+}
+
+.form-select {
+  // resetting to UA defaults
+  color: fieldtext !important;
+  background-color: field !important;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  // Note: following changes the dropdown caret color
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>") !important;
+  background-size: unset !important;
+
+  @media (prefers-color-scheme: dark) {
+    background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>") !important;
+  }
+}
+
 /* 
 Boostrap classes override END
 -----------------------------------------------------------------------------
