--- a/src/styles/globalTheme.module.scss
+++ b/src/styles/globalTheme.module.scss
@@ -6,7 +6,7 @@ $md: '(min-width: 769px)';
 $md-screen: 768px;
 $xl-screen: 1200px;
 
-$grey: grey;
 $primary: #557a95;
+$primary-dark: #274e67;
 $primary-hover: #48687f;
 $secondary: #e8d2c0;
